--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "pug": "^3.0.0",
