--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "cloudinary": "^1.23.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -19,8 +20,7 @@
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "pug": "^3.0.0",
-    "uuid": "^8.3.0"
+    "pug": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
