--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "moment": "^2.28.0",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
